--- a/#src/_links.html
+++ b/#src/_links.html
@@ -1,4 +1,5 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/bootstrap-grid.css">
 <link rel="stylesheet" href="css/style.css"></head>
