--- a/#src/_header.html
+++ b/#src/_header.html
@@ -8,55 +8,59 @@
                 <img src="img/icons/icons.svg#header-logo" alt="Logo">        
             </a>
             <div class="header__wrapper">
-                <div class="header__menu">
-                    <nav>
-                        <ul class="header__list">
-                            <li>
-                                <a href="#" class="header__link">Карта</a>
-                            </li>
-                            <li>
-                                <a href="#" class="header__link">Кальянные</a>
-                            </li>
-                            <li>
-                                <a href="#" class="header__link">Товары</a>
-                            </li>
-                            <li>
-                                <a href="#" class="header__link">Магазины</a>
-                            </li>
-                            <li>
-                                <span class="header__list-span">Ваш город:</span>
-                                <a href="#" class="header__link">Москва</a>
-                            </li>
-                        </ul>
-                    </nav>
+                <div class="header-menu">
+                    <ul class="header-menu__list">
+                        <li class="header-menu__item">
+                            <a href="#" class="header-menu__link">Карта</a>
+                        </li>
+                        <li class="header-menu__item">
+                            <a href="#" class="header-menu__link">Кальянные</a>
+                        </li>
+                        <li class="header-menu__item">
+                            <a href="#" class="header-menu__link">Товары</a>
+                        </li>
+                        <li class="header-menu__item">
+                            <a href="#" class="header-menu__link">Магазины</a>
+                        </li>
+                        <li class="header-menu__item">
+                            <span class="header-menu__list-span">Ваш город:</span>
+                            <a href="#" class="header-menu__link">Москва</a>
+                        </li>
+                    </ul>
 
-                    <div class="header__mobile-btns">
-                        <a class="header__btn-help" href="#">
-                            <svg class="header__btn-help--icon">
-                                <use xlink:href="img/icons/icons.svg#ask-icon-grey"></use>
-                            </svg>
-                        </a>
-                        <div class="header__mobile-leng-btns">
-                            <a class="header__mobile-leng-btn" href="#">
-                                EN
-                            </a>
-                            <a class="header__mobile-leng-btn active" href="#">
-                                RU
+                    <div class="header-mobile-btns">
+                        <div class="header-help">
+                            <a class="header-help__btn" href="#">
+                                <svg class="header-help__btn--icon">
+                                    <use xlink:href="img/icons/icons.svg#ask-icon-grey"></use>
+                                </svg>
                             </a>
                         </div>
+                        <ul class="lang-switcher">
+                            <li class="lang-switcher__item">
+                                <a class="lang-switcher__link" href="#">EN</a>
+                            </li>
+                            <li class="lang-switcher__item">
+                                <a class="lang-switcher__link active" href="#">RU</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-                <div class="header__nav">
-                    <a class="header__nav-link" href="#">
-                        <svg class="header__nav-icon">
-                            <use xlink:href="img/icons/icons.svg#persone-icon-grey"></use>
-                        </svg>
-                    </a>
-                    <a class="header__nav-link" href="#">
-                        <svg class="header__nav-icon">
-                            <use xlink:href="img/icons/icons.svg#shop-icon-grey"></use>
-                        </svg>
-                    </a>
+                <div class="header-btns">
+                    <div class="header-btn">
+                        <a class="header-btn__link" href="#">
+                            <svg class="header-btn__link--icon">
+                                <use xlink:href="img/icons/icons.svg#persone-icon-grey"></use>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="header-btn">
+                        <a class="header-btn__link" href="#">
+                            <svg class="header-btn__link--icon">
+                                <use xlink:href="img/icons/icons.svg#shop-icon-grey"></use>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </div>
            
