--- a/#src/_scripts.html
+++ b/#src/_scripts.html
@@ -1,3 +1,4 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
+<script src="js/swiper-bundle.min.js"></script>
 <script src="js/script.js"></script>
