--- a/#src/_header.html
+++ b/#src/_header.html
@@ -4,7 +4,7 @@
             <div class="header__burger">
                 <span></span>
             </div>
-            <a href="#" class="header__logo">
+            <a href="index.html" class="header__logo">
                 <img src="img/icons/icons.svg#header-logo" alt="Logo">        
             </a>
             <div class="header__wrapper">
