--- a/#src/index.html
+++ b/#src/index.html
@@ -136,7 +136,7 @@
                     <div class="general-head">
                         <div class="general-head__title">У нас часто покупают :</div>
                         <div class="general-head__actions">
-                            <a class="general-head__btn" href="#">Lead more</a>
+                            <a class="general-head__btn" href="page-everything.html">Lead more</a>
                         </div>
                     </div>
                     <div class="swiper-container section-buy-slider">
@@ -430,9 +430,71 @@
                     </div>
                 </div>
             </section>
+            <section class="section section-partners">
+                <div class="container">
+                    <div class="general-head">
+                        <div class="general-head__title">Наши партнёры:</div>
+                    </div>
+                    <div class="swiper-container section-partners-slider">
+                        <div class="swiper-wrapper">
+                          <div class="swiper-slide">
+                                <div class="partners-card">
+                                    <div class="partners-card__descr">
+                                    <h2 class="partners-card__headline">Nebo Lounge & Bar</h2>
+                                    <p class="partners-card__txt">Indulgence contrasted sufficient to unpleasant in in insensible favourable. Do play they miss give so up. At none neat am do over will. Draw from upon here gone add one. Sportsman do offending supported extremity breakfast by listening. As mr started arrival subject by believe. Ecstatic elegance gay but disposed. Any delicate you.
+                                    </p>
+                                    <a class="partners-card__link" href="#">Lead more</a>
+                                    </div>
+                                    <div class="partners-card__photo order-first order-lg-last">
+                                    <img class="partners-card__photo-img" src="img/partners-cart-photo.png" alt="Photo">
+                                    </div>
+                                </div>
+                          </div>
+                          <div class="swiper-slide">
+                                <div class="partners-card">
+                                    <div class="partners-card__descr">
+                                        <h2 class="partners-card__headline">Nebo Lounge & Bar</h2>
+                                        <p class="partners-card__txt">Indulgence contrasted sufficient to unpleasant in in insensible favourable. Do play they miss give so up. At none neat am do over will. Draw from upon here gone add one. Sportsman do offending supported extremity breakfast by listening. As mr started arrival subject by believe. Ecstatic elegance gay but disposed. Any delicate you.
+                                        </p>
+                                        <a class="partners-card__link" href="#">Lead more</a>
+                                    </div>
+                                    <div class="partners-card__photo order-first order-lg-last">
+                                        <img class="partners-card__photo-img" src="img/partners-cart-photo.png" alt="Photo">
+                                    </div>
+                                </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="partners-card">
+                                <div class="partners-card__descr">
+                                    <h2 class="partners-card__headline">Nebo Lounge & Bar</h2>
+                                    <p class="partners-card__txt">Indulgence contrasted sufficient to unpleasant in in insensible favourable. Do play they miss give so up. At none neat am do over will. Draw from upon here gone add one. Sportsman do offending supported extremity breakfast by listening. As mr started arrival subject by believe. Ecstatic elegance gay but disposed. Any delicate you.
+                                    </p>
+                                    <a class="partners-card__link" href="#">Lead more</a>
+                                </div>
+                                <div class="partners-card__photo order-first order-lg-last">
+                                    <img class="partners-card__photo-img" src="img/partners-cart-photo.png" alt="Photo">
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="general-pagination general-pagination_d-flex">
+                            <button class="general-pagination__btn general-pagination__btn_prev" type="button">
+                                <svg class="general-pagination__btn--icon general-pagination__btn--icon_prev">
+                                    <use xlink:href="img/icons/icons.svg#general-pagination-arr"></use>
+                                </svg>
+                            </button>
+                            <button class="general-pagination__btn general-pagination__btn_next" type="button">
+                                <svg class="general-pagination__btn--icon">
+                                    <use xlink:href="img/icons/icons.svg#general-pagination-arr"></use>
+                                </svg>
+                            </button>
+                        </div>
+                      </div>
+                </div>
+            </section>
         </main>
     </div>
-    <footer class="footer"></footer>
+    @@include('_footer.html')
     @@include('_scripts.html')
 </body>
 </html>
