--- a/#src/_header.html
+++ b/#src/_header.html
@@ -11,7 +11,7 @@
                 <div class="header-menu">
                     <ul class="header-menu__list">
                         <li class="header-menu__item">
-                            <a href="#" class="header-menu__link">Карта</a>
+                            <a href="archive-all.html" class="header-menu__link">Карта</a>
                         </li>
                         <li class="header-menu__item">
                             <a href="archive-hookah.html" class="header-menu__link">Кальянные</a>
