--- a/#src/_scripts.html
+++ b/#src/_scripts.html
@@ -1,4 +1,5 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/swiper-bundle.min.js"></script>
+<script src="js/jquery.fancybox.js"></script>
 <script src="js/script.js"></script>
