Add last changes

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="header-btns">
                     <div class="header-btn">
-                        <a class="header-btn__link" href="customer-account.html">
+                        <a class="header-btn__link" href="customer-account-products.html">
                             <svg class="header-btn__link--icon">
                                 <use xlink:href="img/icons/icons.svg#persone-icon-grey"></use>
                             </svg>
