Add last changes

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -24,7 +24,7 @@
                         </li>
                         <li class="header-menu__item">
                             <span class="header-menu__list-span">Ваш город:</span>
-                            <a href="#" class="header-menu__link">Москва</a>
+                            <a href="registration-page-type.html" class="header-menu__link">Москва</a>
                         </li>
                     </ul>
 
@@ -55,7 +55,7 @@
                         </a>
                     </div>
                     <div class="header-btn">
-                        <a class="header-btn__link" href="#">
+                        <a class="header-btn__link" href="customer-trade-send.html">
                             <svg class="header-btn__link--icon">
                                 <use xlink:href="img/icons/icons.svg#shop-icon-grey"></use>
                             </svg>
