--- a/#src/single-product.html
+++ b/#src/single-product.html
@@ -27,9 +27,9 @@
                     </div>
                     
                     <div class="single-head">
-                        <div class="select pt-2 pb-2">
-                            <a class="select__btn" href="#">
-                                <svg class="select__btn--icon">
+                        <div class="select-heart pt-2 pb-2">
+                            <a class="select-heart__btn" href="#">
+                                <svg class="select-heart__btn--icon">
                                     <use xlink:href="img/icons/icons.svg#heart-icon"></use>
                                 </svg>
                             </a>
