--- a/#src/customer-account-contacts.html
+++ b/#src/customer-account-contacts.html
@@ -73,11 +73,8 @@
                                         </select>
                                     </div>
                                     <div class="column-wgt">
-                                        <label class="column-wgt__title" for="
-                                        delivery">Способ доставки</label>
-                                        <select class="select contacts-select" name="
-                                        delivery" id="
-                                        delivery">
+                                        <label class="column-wgt__title" for="delivery">Способ доставки</label>
+                                        <select class="select contacts-select" name="delivery" id="delivery">
                                             <option>Новая почта</option>
                                             <option>Новая почта</option>
                                             <option>Новая почта</option>
