--- a/#src/_header.html
+++ b/#src/_header.html
@@ -14,10 +14,10 @@
                             <a href="archive-all.html" class="header-menu__link">Карта</a>
                         </li>
                         <li class="header-menu__item">
-                            <a href="hookah-filters.html" class="header-menu__link">Кальянные</a>
+                            <a href="hookah-user-filters.html" class="header-menu__link">Кальянные</a>
                         </li>
                         <li class="header-menu__item">
-                            <a href="archive-customers.html" class="header-menu__link">Товары</a>
+                            <a href="advertising-type.html" class="header-menu__link">Товары</a>
                         </li>
                         <li class="header-menu__item">
                             <a href="archive-shop.html" class="header-menu__link">Магазины</a>
