--- a/#src/category-products.html
+++ b/#src/category-products.html
@@ -13,17 +13,18 @@
             <section class="section section-registration-product">
                 <div class="container">
                     <div class="row">
-                        <div class="registration-head">
-                            <div class="registration-head__headline">HookahMap</div>
-                            <div class="registration-head__action">
-                                <button class="registration-filter-btn" type="button">
-                                    <svg class="registration-filter-btn__icon">
-                                        <use xlink:href="img/icons/icons.svg#filters-icon"></use>
-                                    </svg>
-                                </button>
-                            </div>
-                        </div>
+                     
                         <div class="col-lg-3">
+                            <div class="registration-head">
+                                <div class="registration-head__headline">HookahMap</div>
+                                <div class="registration-head__action">
+                                    <button class="registration-filter-btn" type="button">
+                                        <svg class="registration-filter-btn__icon">
+                                            <use xlink:href="img/icons/icons.svg#filters-icon"></use>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
                             <div class="account-nav">
                                 <button class="account-nav__btn-back" type="button">Вернуться</button>
                                 <ul class="account-nav__list">
@@ -43,12 +44,25 @@
                             </div>
                         </div>
                         <div class="col-lg-9">
+                            <div class="breadcrumbs pt-lg-5 pb-4">
+                                <ul class="breadcrumbs__list">
+                                    <li class="breadcrumbs__item">
+                                        <a class="breadcrumbs__link" href="#">Главная</a>
+                                    </li>
+                                    <li class="breadcrumbs__item">
+                                        <a class="breadcrumbs__link" href="#">Товары</a>
+                                    </li>
+                                    <li class="breadcrumbs__item">
+                                        <a class="breadcrumbs__link breadcrumbs__link_active" href="#">Табак</a>
+                                    </li>
+                                </ul>
+                            </div>
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="category-add">
                                         <a class="category-add__link" href="category-add-product.html">
                                             <div class="category-add__icon">+</div>
-                                            <div class="category-add__btn">Добавить категорию</div>
+                                            <div class="category-add__btn">Добавить товар</div>
                                         </a>
                                     </div>
                                 </div>
