--- a/#src/hookah-user-filters.html
+++ b/#src/hookah-user-filters.html
@@ -5,104 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gulp</title>
    
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/bootstrap-grid.css">
-<link rel="stylesheet" href="css/swiper-bundle.min.css">
-<link rel="stylesheet" href="css/jquery.fancybox.css">
-<link rel="stylesheet" href="css/style.css"></head>
+    @@include('_links.html')
 <body>
     <div class="content">
-        <header class="header">
-    <div class="container">
-        <div class="header__body">
-            <div class="header__burger">
-                <span></span>
-            </div>
-            <a href="index.html" class="header__logo">
-                <img src="img/icons/icons.svg#header-logo" alt="Logo">        
-            </a>
-            <div class="header__wrapper">
-                <div class="header-menu">
-                    <ul class="header-menu__list">
-                        <li class="header-menu__item">
-                            <a href="archive-all.html" class="header-menu__link">Карта</a>
-                        </li>
-                        <li class="header-menu__item">
-                            <a href="hookah-user-filters.html" class="header-menu__link">Кальянные</a>
-                        </li>
-                        <li class="header-menu__item">
-                            <a href="advertising-type.html" class="header-menu__link">Товары</a>
-                        </li>
-                        <li class="header-menu__item">
-                            <a href="archive-shop.html" class="header-menu__link">Магазины</a>
-                        </li>
-                        <li class="header-menu__item">
-                            <span class="header-menu__list-span">Ваш город:</span>
-                            <a href="registration-page-type.html" class="header-menu__link">Москва</a>
-                        </li>
-                    </ul>
-
-                    <div class="header-mobile-btns">
-                        <div class="header-help">
-                            <a class="header-help__btn" href="#">
-                                <svg class="header-help__btn--icon">
-                                    <use xlink:href="img/icons/icons.svg#ask-icon-grey"></use>
-                                </svg>
-                            </a>
-                        </div>
-                        <ul class="lang-switcher">
-                            <li class="lang-switcher__item">
-                                <a class="lang-switcher__link" href="#">EN</a>
-                            </li>
-                            <li class="lang-switcher__item">
-                                <a class="lang-switcher__link active" href="#">RU</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="header-btns">
-                    <div class="header-btn">
-                        <a class="header-btn__link" href="customer-account-products.html">
-                            <svg class="header-btn__link--icon">
-                                <use xlink:href="img/icons/icons.svg#persone-icon-grey"></use>
-                            </svg>
-                        </a>
-                    </div>
-                    <div class="header-btn">
-                        <a class="header-btn__link" href="category-selection.html">
-                            <svg class="header-btn__link--icon">
-                                <use xlink:href="img/icons/icons.svg#shop-icon-grey"></use>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-            </div>
-           
-        </div>
-    </div>
-</header>
+        @@include('_header.html')
         <main class="main general-content">
-            <section class="section section-hookah-filters">
+            <section class="section section-hookah-user-filters">
                 <div class="container">
-                    <div class="breadcrumbs pt-3 pt-lg-4 pb-4">
-                        <ul class="breadcrumbs__list">
-                            <li class="breadcrumbs__item">
-                                <a class="breadcrumbs__link" href="#">Главная</a>
-                            </li>
-                            <li class="breadcrumbs__item">
-                                <a class="breadcrumbs__link" href="#">Регистрация</a>
-                            </li>
-                            <li class="breadcrumbs__item">
-                                <a class="breadcrumbs__link" href="#">Заполнение профиля</a>
-                            </li>
-                            <li class="breadcrumbs__item">
-                                <a class="breadcrumbs__link breadcrumbs__link_active" href="#">Фильтрация</a>
-                            </li>
-                        </ul>
+                    <div class="hookah-user-head">
+                        <div class="hookah-user-search">
+                            <div class="hookah-user-search__txt">Вы ищите:</div>
+                            <a class="hookah-user-search__link active" href="#">Кальянные</a>
+                            <a class="hookah-user-search__link" href="#">Магазины</a>
+                        </div>
+                        <div class="hookah-selects">
+                            <select class="hookah-select" name="delivery" id="delivery">
+                                <option>Германия</option>
+                                <option>Германия</option>
+                                <option>Германия</option>
+                                <option>Донецк</option>
+                            </select>   
+                            <select class="hookah-select" name="delivery" id="delivery">
+                                <option>Мюнхен</option>
+                                <option>Мюнхен</option>
+                                <option>Мюнхен</option>
+                                <option>Донецк</option>
+                            </select> 
+                        </div>
                     </div>
-                    <form class="hookah-filters-form" action="#">
+                    <form class="hookah-user-filters-form" action="#">
                         <div class="row justify-content-between">
                             <div class="col-md-4 col-lg-3">
                                 <div class="general-filter">
@@ -466,62 +397,7 @@
         </main>
 
     </div>
-    <footer class="footer">
-    <div class="container">
-        <div class="footer__wrapper">
-            <div class="footer-info">
-                <div class="footer-info__headline">Hookah Map.</div>
-                <div class="footer-info__descr d-none d-lg-block">
-                    <a class="footer-info__txt" href="#">Служба поддержки</a>
-                    <div class="footer-rights">@ 2020 Hookah Map</div>
-                </div>
-            </div>
-            <form class="footer-form" action="#">
-                <div class="footer-form__headline">For callaboration</div>
-                <input class="footer-form__field" type="text" placeholder="E-mail">
-                <button class="footer-form__btn" type="submit">
-                    <svg class="footer-form__btn--icon">
-                        <use xlink:href="img/icons/icons.svg#btn-arr"></use>
-                    </svg>
-                </button>
-            </form>
-            <div class="footer-nav">
-                <ul class="footer-nav__list">
-                    <li class="footer-nav__item">
-                        <a class="footer-nav__link" href="#">
-                            Создать магазин
-                            <!-- <svg class="footer-nav__link--icon">
-                                <use xlink:href="img/icons/icons.svg#btn-arr"></use>
-                            </svg> -->
-                        </a>
-                    </li>
-                    <li class="footer-nav__item">
-                        <a class="footer-nav__link" href="#">
-                            Служба поддержки                        
-                            <!-- <svg class="footer-nav__link--icon">
-                                <use xlink:href="img/icons/icons.svg#btn-arr"></use>
-                            </svg> -->
-                        </a>
-                    </li>
-                    <li class="footer-nav__item">
-                        <a class="footer-nav__link" href="#">
-                            Зарегистрировать кальянную
-                            <!-- <svg class="footer-nav__link--icon">
-                                <use xlink:href="img/icons/icons.svg#btn-arr"></use>
-                            </svg> -->
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer-rights d-lg-none">@ 2020 Hookah Map</div>
-        </div>
-        
-    </div>
-</footer>
-    <script src="js/jquery.min.js"></script>
-<!-- <script src="js/bootstrap.js"></script> -->
-<script src="js/swiper-bundle.min.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/script.js"></script>
+    @@include('_footer.html')
+    @@include('_scripts.html')
 </body>
 </html>
