Add last changes

--- a/#src/_scripts.html
+++ b/#src/_scripts.html
@@ -1,3 +1,46 @@
+<div class="modal hide">
+    <div class="modal__dialog">
+        <div class="modal__content">
+                <div data-close class="modal__close">&times;</div>
+                <div class="modal-head">
+                    <svg class="modal-head__icon">
+                        <use xlink:href="img/icons/icons.svg#ask-icon"></use>
+                    </svg>
+                </div>
+                <div class="modal-body">
+                    <div class="modal-body__item">
+                        <h2 class="modal-body__title">Что такое Hookah Map?</h2>
+                        <p class="modal-body__txt">Hookah Map - это сервис который поможет тебе спланировать твой досуг и выбрать место которое подойдёт именно тебе! Также, Hookah Map является большим маркетплейсом на котором собрано много магазинов с качественным набором товаров для любителей дымно провести время.</p>
+                    </div>
+                    <div class="modal-body__item">
+                        <h2 class="modal-body__title">Какие преимущества Hookah Map? </h2>
+                        <p class="modal-body__txt">Широкий выбор кальянных, товаров и магазинов</p>
+                        <p class="modal-body__txt">Возможность разместить свой контент, добавить свой магазин </p>
+                        <p class="modal-body__txt">Большой набор фильтров</p>
+                        <p class="modal-body__txt">Проверенные магазины и кальянные</p>
+                    </div>
+                    <nav class="modal-body__nav">
+                        <ul class="modal-body__list">
+                            <li class="modal-body__item">
+                                <a class="modal-body__link" href="#">Карта</a>
+                            </li>
+                            <li class="modal-body__item">
+                                <a class="modal-body__link" href="#">Кальянные</a>
+                            </li>
+                            <li class="modal-body__item">
+                                <a class="modal-body__link" href="#">Товары</a>
+                            </li>
+                            <li class="modal-body__item">
+                                <a class="modal-body__link" href="#">Магазины</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <script src="js/jquery.min.js"></script>
 <!-- <script src="js/bootstrap.js"></script> -->
 <script src="js/swiper-bundle.min.js"></script>
