--- a/#src/registration-info-hookah.html
+++ b/#src/registration-info-hookah.html
@@ -94,7 +94,7 @@
                                                     <div class="checkbox">
                                                         <label class="custom-checkbox">
                                                             <input type="checkbox" name="color-1" value="indigo">
-                                                             <span>
+                                                                <span>
                                                                 <span class="custom-checkbox__txt">Понедельник</span>
                                                             </span>
                                                         </label>
@@ -104,7 +104,7 @@
                                                     <div class="checkbox">
                                                         <label class="custom-checkbox">
                                                             <input type="checkbox" name="color-1" value="indigo">
-                                                             <span>
+                                                                <span>
                                                                 <span class="custom-checkbox__txt">Вторник</span>
                                                             </span>
                                                         </label>
@@ -114,7 +114,7 @@
                                                     <div class="checkbox">
                                                         <label class="custom-checkbox">
                                                             <input type="checkbox" name="color-1" value="indigo">
-                                                             <span>
+                                                                <span>
                                                                 <span class="custom-checkbox__txt">Среда</span>
                                                             </span>
                                                         </label>
@@ -124,7 +124,7 @@
                                                     <div class="checkbox">
                                                         <label class="custom-checkbox">
                                                             <input type="checkbox" name="color-1" value="indigo">
-                                                             <span>
+                                                                <span>
                                                                 <span class="custom-checkbox__txt">Четверг</span>
                                                             </span>
                                                         </label>
@@ -138,7 +138,7 @@
                                                     <div class="checkbox">
                                                         <label class="custom-checkbox">
                                                             <input type="checkbox" name="color-1" value="indigo">
-                                                             <span>
+                                                                <span>
                                                                 <span class="custom-checkbox__txt">Пятница</span>
                                                             </span>
                                                         </label>
@@ -148,7 +148,7 @@
                                                     <div class="checkbox">
                                                         <label class="custom-checkbox">
                                                             <input type="checkbox" name="color-1" value="indigo">
-                                                             <span>
+                                                                <span>
                                                                 <span class="custom-checkbox__txt">Суббота</span>
                                                             </span>
                                                         </label>
@@ -158,7 +158,7 @@
                                                     <div class="checkbox">
                                                         <label class="custom-checkbox">
                                                             <input type="checkbox" name="color-1" value="indigo">
-                                                             <span>
+                                                                <span>
                                                                 <span class="custom-checkbox__txt">Воскресенье</span>
                                                             </span>
                                                         </label>
@@ -167,8 +167,9 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="schedule-time pb-3">
-                                        <div class="schedule-time__inner">
+                                   
+                                    <div class="schedule-time pb-3 schedule-time-js">
+                                        <div class="schedule-time__inner schedule-time__inner-js">
                                             с
                                             <div class="schedule-time__num">
                                                 <span>00</span>
@@ -182,7 +183,7 @@
                                                 <span>00</span>
                                             </div>
                                         </div>
-                                        <button class="schedule-time__edit-btn" type="button">Edit</button>
+                                        <button class="schedule-time__edit-btn schedule-time__edit-btn-js" type="button">Edit</button>
                                     </div>
                                 </div>
                                 <div class="registration-wgt">
