--- a/#src/single-product.html
+++ b/#src/single-product.html
@@ -25,7 +25,6 @@
                             </li>
                         </ul>
                     </div>
-                    
                     <div class="single-head">
                         <div class="select-heart pt-2 pb-2">
                             <a class="select-heart__btn" href="#">
@@ -38,18 +37,44 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-5">
-                            <div class="single-product-photo">
-                                <a data-fancybox="img-photo" class="single-product-photo__gallery single-product-photo__gallery_main" href="img/product-photo-1.png" data-caption="My beautiful image">
-                                    <img class="single-product-photo__img single-product-photo__img_main pb-1" src="img/product-photo-1.png" alt="Photo">                             
-                                </a>
-                                <!-- <img class="single-product-photo__img single-product-photo__img_main pb-1" src="img/product-photo-1.png" alt="Photo"> -->
-                                <a data-fancybox="img-photo" class="single-product-photo__gallery" href="img/product-photo-2.png" data-caption="My beautiful image">
-                                    <img class="single-product-photo__img pr-1" src="img/product-photo-2.png" alt="Photo">
-                                </a>
-                                <a data-fancybox="img-photo" class="single-product-photo__gallery" href="img/product-photo-3.png" data-caption="My beautiful image">
-                                    <img class="single-product-photo__img pl-1" src="img/product-photo-3.png" alt="Photo">
-                                </a>
-                            </div>
+                            <div class="single-product-swiper swiper-container single-product-gallery-top">
+                                <div class="single-product-swiper__wrapper swiper-wrapper">
+                                    <div class="single-product-swiper__slide swiper-slide">
+                                        <div class="single-product-photo">
+                                            <a data-fancybox="img-photo" class="single-product-photo__gallery single-product-photo__gallery_main" href="img/product-photo-1.png" data-caption="My beautiful image">
+                                                <img class="single-product-photo__img single-product-photo__img_main pb-1" src="img/product-photo-1.png" alt="Photo">                             
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="single-product-swiper__slide swiper-slide">
+                                        <div class="single-product-photo">
+                                            <a data-fancybox="img-photo" class="single-product-photo__gallery single-product-photo__gallery_main" href="img/product-photo-1.png" data-caption="My beautiful image">
+                                                <img class="single-product-photo__img single-product-photo__img_main pb-1" src="img/product-photo-1.png" alt="Photo">                             
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="single-product-swiper__slide swiper-slide">
+                                        <div class="single-product-photo">
+                                            <a data-fancybox="img-photo" class="single-product-photo__gallery single-product-photo__gallery_main" href="img/product-photo-1.png" data-caption="My beautiful image">
+                                                <img class="single-product-photo__img single-product-photo__img_main pb-1" src="img/product-photo-1.png" alt="Photo">                             
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                              </div>
+                              <div class="single-product-swiper swiper-container single-product-gallery-thumbs">
+                                <div class="single-product-swiper__wrapper swiper-wrapper">
+                                    <div class="single-product-swiper__slide swiper-slide">
+                                        <img class="single-product-swiper__img" src="img/product-photo-1.png" alt="Photo">
+                                    </div>
+                                    <div class="single-product-swiper__slide swiper-slide">
+                                        <img class="single-product-swiper__img" src="img/product-photo-1.png" alt="Photo">
+                                    </div>
+                                    <div class="single-product-swiper__slide swiper-slide">
+                                        <img class="single-product-swiper__img" src="img/product-photo-1.png" alt="Photo">
+                                    </div>
+                                </div>
+                              </div>
                         </div>
                         <div class="col-lg-7">
                             <div class="d-flex flex-column">
