--- a/#src/_header.html
+++ b/#src/_header.html
@@ -17,7 +17,7 @@
                             <a href="archive-products.html" class="header-menu__link">Кальянные</a>
                         </li>
                         <li class="header-menu__item">
-                            <a href="advertising-type.html" class="header-menu__link">Товары</a>
+                            <a href="single-product.html" class="header-menu__link">Товары</a>
                         </li>
                         <li class="header-menu__item">
                             <a href="archive-shop.html" class="header-menu__link">Магазины</a>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="header-btns">
-                    <div class="header-btn">
+                    <div id="log-dropdown" class="header-btn">
                         <button class="header-btn__button log-dropdown-btn" type="button">
                             <svg class="header-btn__button--icon">
                                 <use xlink:href="img/icons/icons.svg#persone-icon"></use>
@@ -71,7 +71,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="header-btn">
+                    <div id="basket-dropdown" class="header-btn">
                         <button class="header-btn__button basket-dropdown-btn" type="button">
                             <svg class="header-btn__link--icon">
                                 <use xlink:href="img/icons/icons.svg#shop-icon"></use>
