--- a/#src/index.html
+++ b/#src/index.html
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                         <div class="header-btns">
-                            <div class="header-btn">
+                            <div id="log-dropdown" class="header-btn">
                                 <button class="header-btn__button log-dropdown-btn" type="button">
                                     <svg class="header-btn__button--icon">
                                         <use xlink:href="img/icons/icons.svg#persone-icon"></use>
@@ -86,7 +86,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="header-btn">
+                            <div id="basket-dropdown" class="header-btn">
                                 <button class="header-btn__button basket-dropdown-btn" type="button">
                                     <svg class="header-btn__link--icon">
                                         <use xlink:href="img/icons/icons.svg#shop-icon"></use>
